unpackaged/main/default/objects/EmailMessage/fields/Text_From_Address__c.field-meta.xml
<CustomField>
    <fullName>Text_From_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Text From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>