unpackaged/main/default/objects/EmailMessage/validationRules/Cannot_Send_An_Email_Without_ToAddress.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Send_An_Email_Without_ToAddress</fullName>
    <active>true</active>
    <description>To stop sending an email when there is no email address in ToAddress field but BCCAddress and CCAddress are having emails in them.</description>
    <errorConditionFormula>ISBLANK( ToAddress )</errorConditionFormula>
    <errorMessage>To Address field cannot be empty</errorMessage>
</ValidationRule>